Update index.html file 20210307

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
   <h1>AchiStar Technologies</h1>
+  We are a Agile organization, it follows scrum methodology to develop the projects.
 </body>
-
 </html>
