Update index.html V2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
   <h1>AchiStar Technologies</h1>
-  We are a Agile organization, it follows scrum methodology to develop the projects.
+  We are a Agile organization, it follows scrum methodology to develop the projects.<br />
+  The tasks will be for this project: <br />
 </body>
 </html>
