Update index.html V3

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
   <h1>AchiStar Technologies</h1>
   We are a Agile organization, it follows scrum methodology to develop the projects.<br />
   The tasks will be for this project: <br />
+  Availability to the nersions very time a code is committed to the repository <br />
+  Track their versions every time a coe is committed to the repository <br />
+  Build the application in docker and ost it in the Docker Hub <br />
+  Pull the docker image and run it again <br />
 </body>
 </html>
